# Computer-Vison-

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
configs/: data_config.yaml  train_dinov2.yaml  train_efficientnet.yaml  train_resnet.yaml
configs/hpc/: slurm_crossval.sh  slurm_preprocess.sh  slurm_train.sh
docs/: PRD.md  TRD.md
frontend/: Dockerfile  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/predict/: route.ts
frontend/src/app/dashboard/: page.tsx
frontend/src/components/: providers.tsx
frontend/src/components/prediction/: confidence-chart.tsx  gradcam-overlay.tsx  prediction-card.tsx
frontend/src/components/upload/: image-uploader.tsx
frontend/src/lib/: api.ts  schemas.ts  utils.ts
scripts/: analyze_data.py  run_cleaning.py  run_cross_validation.py  run_evaluation.py  run_inference.py  run_training.py  upload_to_huggingface.py
server/: Dockerfile  main.py  model_loader.py  schemas.py
src/data/: __init__.py  augmentation.py  cleaning.py  dataset.py  download.py  preprocessing.py  validation.py
src/evaluation/: cross_dataset.py  evaluate.py  gradcam.py  threshold_opt.py
src/models/: dinov2.py  efficientnet.py  ensemble.py  heads.py  resnet_baseline.py
src/training/: callbacks.py  cross_validation.py  losses.py  metrics.py  schedulers.py  trainer.py
src/utils/: checkpoint.py  config.py  logging.py  seed.py
tasks/: lessons.md  todo.md
