[project]
name = "dr-detection"
version = "0.1.0"
description = "Automated Diabetic Retinopathy Detection & Grading System"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Anish"}]

dependencies = [
    # Core ML
    "torch>=2.2",
    "torchvision>=0.17",
    "timm>=1.0",

    # Data processing
    "albumentations>=1.4",
    "opencv-python>=4.9",
    "scikit-learn>=1.4",
    "pandas>=2.2",
    "numpy>=1.26",
    "pillow>=10.0",

    # Visualization
    "matplotlib>=3.8",
    "seaborn>=0.13",

    # Monitoring
    "tensorboard>=2.16",

    # Config & utilities
    "pyyaml>=6.0",
    "tqdm>=4.66",

    # Data pipeline
    "imagehash>=4.3",
    "kaggle>=1.6",

    # Explainability
    "grad-cam>=1.5",

    # Inference server
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
wandb = ["wandb>=0.16"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.3",
]

[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
